--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
+cloudinary==1.20.0
+cycler==0.10.0
+decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.0.6
 django-cors-headers==3.2.1
+django-pandas==0.6.1
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
+kiwisolver==1.2.0
+matplotlib==3.2.1
+networkx==2.4
+numpy==1.18.4
+pandas==1.0.3
 Pillow==7.1.2
 psycopg2==2.8.5
 PyJWT==1.7.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-decouple==3.3
 pytz==2020.1
 six==1.14.0
 sqlparse==0.3.1
+urllib3==1.25.9
