--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-pandas==0.6.1
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
+gunicorn==20.0.4
 kiwisolver==1.2.0
 matplotlib==3.2.1
 networkx==2.4
