--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-rest-auth==0.9.5
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 gunicorn==20.0.4
+joblib==1.0.1
 kiwisolver==1.2.0
 matplotlib==3.2.1
 networkx==2.4
@@ -23,7 +24,11 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
+scikit-learn==0.24.1
+scipy==1.6.1
 six==1.14.0
+sklearn==0.0
 sqlparse==0.3.1
+threadpoolctl==2.1.0
 urllib3==1.25.9
 whitenoise==5.1.0
